fixing spacing

--- a/meals.css
+++ b/meals.css
@@ -3,6 +3,8 @@
 body {
     background-color: #ffffff;
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 /* navbar */
@@ -14,7 +16,6 @@ header {
 nav {
     display: flex;
     justify-content: space-between;
-    padding: 4px;
     max-width: 1280px;
     margin: auto;
     align-items: center;   
